# wifi_ble_scanner

./: CMakeLists.txt  README.md  VERSION  prj.conf  sysbuild.conf
boards/: esp32c6_devkitc_esp32c6_hpcore.overlay
include/wifi_ble_scanner/: app_settings.h  app_shell.h  app_wifi.h
src/: CMakeLists.txt  app_settings.c  app_shell.c  app_wifi.c  main.c  settings.c  shell.c  wifi.c
src/led/: CMakeLists.txt  led.c  led.h
src/main/: CMakeLists.txt  main.c
src/settings/: CMakeLists.txt  settings.c  settings.h
src/shell/: CMakeLists.txt  shell.c  shell.h
src/version/: CMakeLists.txt  version.c  version.h
src/wifi/: CMakeLists.txt  wifi.c  wifi.h
sysbuild/: mcuboot.conf
