# SPDX-License-Identifier: MIT

set(WIFI_BLE_SCANNER_GIT_COMMIT_HASH "unknown")
set(WIFI_BLE_SCANNER_GIT_DIRTY_SUFFIX "")

find_package(Git QUIET)
if(GIT_FOUND)
	execute_process(
		COMMAND ${GIT_EXECUTABLE} -C ${PROJECT_SOURCE_DIR} rev-parse --short=12 HEAD
		OUTPUT_VARIABLE WIFI_BLE_SCANNER_GIT_COMMIT_HASH
		OUTPUT_STRIP_TRAILING_WHITESPACE
		ERROR_QUIET
		RESULT_VARIABLE WIFI_BLE_SCANNER_GIT_RESULT)

	if(NOT WIFI_BLE_SCANNER_GIT_RESULT EQUAL 0 OR WIFI_BLE_SCANNER_GIT_COMMIT_HASH STREQUAL "")
		set(WIFI_BLE_SCANNER_GIT_COMMIT_HASH "unknown")
	else()
		execute_process(
			COMMAND ${GIT_EXECUTABLE} -C ${PROJECT_SOURCE_DIR} status --porcelain --untracked-files=normal
			OUTPUT_VARIABLE WIFI_BLE_SCANNER_GIT_STATUS
			OUTPUT_STRIP_TRAILING_WHITESPACE
			ERROR_QUIET)

		if(NOT WIFI_BLE_SCANNER_GIT_STATUS STREQUAL "")
			set(WIFI_BLE_SCANNER_GIT_DIRTY_SUFFIX "-dirty")
		endif()
	endif()
endif()

target_compile_definitions(app PRIVATE
	WIFI_BLE_SCANNER_GIT_COMMIT_HASH="${WIFI_BLE_SCANNER_GIT_COMMIT_HASH}"
	WIFI_BLE_SCANNER_GIT_DIRTY_SUFFIX="${WIFI_BLE_SCANNER_GIT_DIRTY_SUFFIX}")

target_sources(app PRIVATE version.c)